azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {        
        "envPrefixName": {
            "type": "string",
            "metadata": {
                "description": "Prefix for the environment (2-5 characters)"
            },
            "defaultValue": "defo",
            "minLength": 2,
            "maxLength": 7
        },
        "username": {
            "type": "string",
            "metadata": {
                "description": "All VM local administrator username"
            }
        },
        "password": {
            "type": "securestring",
            "metadata": {
                "description": "All VM local administrator password"
            }
        },
        "webSrvVMSize": {
            "type": "string",
            "allowedValues": [
                "Standard_DS1_v2",
                "Standard_DS2_v2",
                "Standard_DS3_v2",
                "Standard_DS4_v2"                
            ],
            "metadata": {
                "description": "The size of the Web Server VMs Created"
            },
            "defaultValue": "Standard_DS1_v2"
        },
        "numberOfWebSrvs": {
            "type": "int",
            "metadata": {
                "description": "Number of Web Servers"
            },
            "allowedValues": [
                1,
                2
            ],
            "defaultValue": 2
        },
        "mysqlVMSize": {
            "type": "string",
            "allowedValues": [
                "Standard_DS1_v2",
                "Standard_DS2_v2",
                "Standard_DS3_v2",
                "Standard_DS4_v2"
            ],
            "metadata": {
                "description": "The size of the MySQL VM Created"
            },
            "defaultValue": "Standard_DS1_v2"
        },
        "diskType": {
            "type": "string",
            "allowedValues": [
                "Standard_LRS",
                "Premium_LRS"
            ],
            "metadata": {
                "description": "The type of the Storage Account created"
            },
            "defaultValue": "Standard_LRS"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        }
    },
    "variables": {
        "virtualNetworkName": "[concat(parameters('envPrefixName'), 'Vnet')]",
        "addressPrefix": "10.0.0.0/16",
        "feSubnetPrefix": "10.0.0.0/24",
        "dbSubnetPrefix": "10.0.2.0/24",
        "feNSGName": "feNsg",
        "dbNSGName": "dbNsg",
        "sqlSrvDBName": "[concat(parameters('envPrefixName'), 'dbSrv')]",
        "mysqlVMSize": "[parameters('mysqlVMSize')]",
        "sqlSrvDBNicName": "[concat(variables('sqlSrvDBName'), 'Nic')]",
        "sqlSvrDBSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), 'DBSubnetName')]",
        "sqlPublicIP": "[concat(parameters('envPrefixName'), 'SqlPip')]",
        "sqlPublicIPRef": "[resourceId('Microsoft.Network/publicIPAddresses', variables('sqlPublicIP'))]",
        "sqlImagePublisher": "jetware-srl",
        "sqlImageOffer": "mysql",
        "sqlImageSku": "mysql57-ubuntu-1604",
        "webSrvName": "[concat(parameters('envPrefixName'), 'webSrv')]",
        "webSrvVMSize": "[parameters('webSrvVMSize')]",
        "webSrvNicName": "[concat(variables('webSrvName'), 'Nic')]",
        "webSrvSubnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), 'FESubnetName')]",
        "webSrvPublicIP": "[concat(parameters('envPrefixName'), 'websrvpip')]",
		"webSrvImagePublisher": "miri-infotech-pvt-ltd",
        "webSrvImageOffer": "wordpress",
        "webSrvImageSku": "wordpress",
        "webSrvAvailabilitySetName": "[concat(parameters('envPrefixName'), 'webSrvAS')]",
        "webSrvNumbOfInstances": "[parameters('numberOfWebSrvs')]",
        "webSrvDnsNameforLBIP": "[concat(toLower(variables('webSrvName')), 'lb')]",
        "webLbName": "[concat(variables('webSrvName'), 'lb')]",
        "webLblb_PIP_Id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('webSrvPublicIP'))]",
        "webLbId": "[resourceId('Microsoft.Network/loadBalancers',variables('webLbName'))]",
        "frontEndIPConfigID": "[concat(variables('webLbId'),'/frontendIPConfigurations/LoadBalancerFrontEnd')]",
        "lbPoolID": "[concat(variables('webLbId'),'/backendAddressPools/BackendPool1')]",
        "lbProbeID": "[concat(variables('webLbId'),'/probes/tcpProbe')]"        
    },
    "resources": [
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('feNSGName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "FrontEndNSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "ssh_rule",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "http_rule",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
					},
					{
						"name": "https_rule",
						"properties": {
							"description": "Allow HTTPS",
							"protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 102,
                            "direction": "Inbound"
						}
                    },
					{
						"name": "MySQL",
						"properties": {
							"priority": 1040,
							"protocol": "TCP",
							"access": "Allow",
							"direction": "Inbound",
							"sourceApplicationSecurityGroups": [],
							"destinationApplicationSecurityGroups": [],
							"sourceAddressPrefix": "*",
							"sourcePortRange": "*",
							"destinationAddressPrefix": "*",
							"destinationPortRange": "1433"
						}
					},
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "name": "[variables('dbNSGName')]",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "BackEndNSG"
            },
            "properties": {
                "securityRules": [
                    {
                        "name": "Allow_FE",
                        "properties": {
                            "description": "Allow FE Subnet",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "10.0.0.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "ssh_rule",
                        "properties": {
                            "description": "Allow SSH",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Block_FE",
                        "properties": {
                            "description": "Block App Subnet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/24",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 121,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Block_Internet",
                        "properties": {
                            "description": "Block Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Deny",
                            "priority": 200,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-06-15",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('feNSGName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('dbNSGName'))]"
            ],
            "tags": {
                "displayName": "VirtualNetwork"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "FESubnetName",
                        "properties": {
                            "addressPrefix": "[variables('feSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('feNSGName'))]"
                            }
                        }
                    },
                    {
                        "name": "DBSubnetName",
                        "properties": {
                            "addressPrefix": "[variables('dbSubnetPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('dbNSGName'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('sqlPublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "tags": {
                "displayName": "SqlPIP"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            }
        },
        {
            "name": "[variables('sqlSrvDBNicName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "tags": {
                "displayName": "SQLSrvDBNic"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('sqlSvrDBSubnetRef')]"
                            },
                            "publicIPAddress": {
                                "id": "[variables('sqlPublicIPRef')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('envPrefixName'), 'dbSrv')]",
            "type": "Microsoft.Compute/virtualMachines",
            "location": "[parameters('location')]",
            "apiVersion": "2017-03-30",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('sqlSrvDBNicName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', variables('sqlPublicIP'))]"
            ],
            "tags": {
                "displayName": "SQL-Svr-DB"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('mysqlVMSize')]"
                },
                "osProfile": {
                    "computerName": "[variables('sqlSrvDBName')]",
                    "adminUsername": "[parameters('username')]",
                    "adminPassword": "[parameters('password')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('sqlImagePublisher')]",
                        "offer": "[variables('sqlImageOffer')]",
                        "sku": "[variables('sqlImageSku')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(variables('sqlSrvDBName'),'_OSDisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                        "storageAccountType": "[parameters('diskType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('sqlSrvDBNicName'))]"
                        }
                    ]
                }
            },
			"plan": {
                "name": "mysql57-ubuntu-1604",
                "publisher": "jetware-srl",
                "product": "mysql"
            }
        },
        {
            "apiVersion": "2017-03-30",
            "type": "Microsoft.Compute/availabilitySets",
            "location": "[parameters('location')]",
            "name": "[variables('webSrvAvailabilitySetName')]",
            "properties": {
                "PlatformUpdateDomainCount": 20,
                "PlatformFaultDomainCount": 2
            },
            "tags": {
                "displayName": "WebSrvAvailabilitySet"
            },
            "sku": {
                "name": "Aligned"
            }
        },
        {
            "name": "[variables('webSrvPublicIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "tags": {
                "displayName": "WebSrvPIP for LB"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[variables('webSrvDnsNameforLBIP')]"
                }
            }
        },
        {
            "apiVersion": "2015-06-15",
            "name": "[variables('webLbName')]",
            "type": "Microsoft.Network/loadBalancers",
            "location": "[parameters('location')]",
            "tags": {
                "displayName": "Web LB"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('webSrvPublicIP'))]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[variables('webLblb_PIP_Id')]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "BackendPool1"
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "SSH-VM0",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 50001,
                            "backendPort": 22,
                            "enableFloatingIP": false
                        }
                    },
                    {
                        "name": "SSH-VM1",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 50002,
                            "backendPort": 22,
                            "enableFloatingIP": false
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "LBRule",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[variables('frontEndIPConfigID')]"
                            },
                            "backendAddressPool": {
                                "id": "[variables('lbPoolID')]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[variables('lbProbeID')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "tcpProbe",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('webSrvNicName'), copyindex())]",
            "type": "Microsoft.Network/networkInterfaces",
            "location": "[parameters('location')]",
            "apiVersion": "2015-06-15",
            "copy": {
                "name": "nicLoop",
                "count": "[variables('webSrvNumbOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/loadBalancers/', variables('webLbName'))]"
            ],
            "tags": {
                "displayName": "WebSrvNic"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('webSrvSubnetRef')]"
                            },
                            "loadBalancerBackendAddressPools": [
                                {
                                    "id": "[concat(variables('webLbId'), '/backendAddressPools/BackendPool1')]"
                                }
                            ],
                            "loadBalancerInboundNatRules": [
                                {
                                    "id": "[concat(variables('webLbId'),'/inboundNatRules/SSH-VM', copyindex())]"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('webSrvName'), copyindex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "location": "[parameters('location')]",
            "apiVersion": "2017-03-30",
            "copy": {
                "name": "webSrvMachineLoop",
                "count": "[variables('webSrvNumbOfInstances')]"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('webSrvNicName'), copyindex())]",
                "[concat('Microsoft.Compute/availabilitySets/', variables('webSrvAvailabilitySetName'))]"
            ],
            "tags": {
                "displayName": "WebSrv"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('webSrvAvailabilitySetName'))]"
                },
                "hardwareProfile": {
                    "vmSize": "[variables('webSrvVMSize')]"
                },
                "osProfile": {
                    "computerName": "[concat(variables('webSrvName'),copyindex())]",
                    "adminUsername": "[parameters('username')]",
                    "adminPassword": "[parameters('password')]"
                },
                "storageProfile": {
                    "imageReference": {
                    "publisher": "[variables('webSrvImagePublisher')]",
                    "offer": "[variables('webSrvImageOffer')]",
                    "sku": "[variables('webSrvImageSku')]",
                    "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(concat(variables('webSrvName'),copyindex(),'_OSDisk'))]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('diskType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('webSrvNicName'), copyindex()))]"
                        }
                    ]
                }
            },
			"plan": {
                "name": "wordpress",
                "publisher": "miri-infotech-pvt-ltd",
                "product": "wordpress"
            }
        }        
    ]
}
